style: format T12 changes
